# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "proc_gen_game"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

[dependencies]
bevy = { version = "0.12" }
bevy-inspector-egui = "0.21.0"
bevy_cursor = { version = "0.2.0", features = ["3d"] }
bevy_egui = { version = "0.23.0", features = ["immutable_ctx"] }
bevy_panorbit_camera = { version = "0.9.0", features = ["bevy_egui"] }
bevy_xpbd_3d = "0.3.2"
bevy_infinite_grid = { git = "https://github.com/rszemplinski/bevy_infinite_grid", branch = "main" }
bevy_mod_picking = { version = "0.17.0", features = ["backend_egui"] }
ringbuffer = "0.15.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
