# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "proc_gen_game"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

[dependencies]
bevy = { version = "0.12" }
bevy-inspector-egui = "0.21.0"
bevy_egui = { version = "0.23.0", features = ["immutable_ctx"] }
bevy_infinite_grid = { git = "https://github.com/rszemplinski/bevy_infinite_grid", branch = "main" }
bevy_mod_picking = { version = "0.17.0", default-features = false, features = [
    "backend_egui"
] }
ringbuffer = "0.15.0"
smooth-bevy-cameras = "0.10.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
